--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
-    <link rel="icon" type="imagem/png" href="./imgs/foto-desenho.png"/>
+    <link rel="stylesheet" type="text/css" href="./assets/css/stylesheet.css" media="screen" />
+    <link rel="icon" type="imagem/png" href="./assets/imgs/foto-desenho.png"/>
     <title>Alan Freitas</title>
 </head>
 
 <body>
     <section>
-        <img src="./imgs/foto-desenho.png"/>
+        <img src="./assets/imgs/foto-desenho.png"/>
         <h1 id="greeting"></h1>
         <p id="work"></p>
         <br>
@@ -20,36 +20,36 @@
             <div>
                 As linguagens e tecnologias que conheço:
                 <br>
-                <img class="icons" src="./imgs/icons/java.png" title="Java"/>
-                <img class="icons" src="./imgs/icons/spring.png" title="Spring Boot"/>
-                <img class="icons" src="./imgs/icons/javascript.png" title="Javascript"/>
-                <img class="icons" src="./imgs/icons/angular.png" title="Angular"/>
-                <img class="icons" src="./imgs/icons/typescript.png" title="Typescript"/>
+                <img class="icons" src="./assets/imgs/icons/java.png" title="Java"/>
+                <img class="icons" src="./assets/imgs/icons/spring.png" title="Spring Boot"/>
+                <img class="icons" src="./assets/imgs/icons/javascript.png" title="Javascript"/>
+                <img class="icons" src="./assets/imgs/icons/angular.png" title="Angular"/>
+                <img class="icons" src="./assets/imgs/icons/typescript.png" title="Typescript"/>
                 <br>
-                <img class="icons" src="./imgs/icons/html5.png" title="HTML5"/>
-                <img class="icons" src="./imgs/icons/css3.png" title="CSS3"/>
-                <img class="icons" src="./imgs/icons/ibm-watson.png" title="Watson Assistant"/>
-                <img class="icons" src="./imgs/icons/db.png" title="Banco de dados"/>
-                <img class="icons" src="./imgs/icons/Excel.png" title="Excel/VBA"/>
+                <img class="icons" src="./assets/imgs/icons/html5.png" title="HTML5"/>
+                <img class="icons" src="./assets/imgs/icons/css3.png" title="CSS3"/>
+                <img class="icons" src="./assets/imgs/icons/ibm-watson.png" title="Watson Assistant"/>
+                <img class="icons" src="./assets/imgs/icons/db.png" title="Banco de dados"/>
+                <img class="icons" src="./assets/imgs/icons/Excel.png" title="Excel/VBA"/>
             </div>
             <div>
                 E os lugares onde estou (clique para acessar):
                 <br><br>
                 <a href="https://www.linkedin.com/in/alan-freitas-b43a99109/"
                 target="_blank" rel="external">
-                <img class="icons" src="./imgs/icons/linkedin.png"
+                <img class="icons" src="./assets/imgs/icons/linkedin.png"
                 title="Linkedin"/></a> 
                                
                 <a href="https://github.com/AlanZF"
                 target="_blank" rel="external">
-                <img class="icons" src="./imgs/icons/github.png"
+                <img class="icons" src="./assets/imgs/icons/github.png"
                 title="GitHub"/></a>     
                
                 <a href="https://medium.com/@alan.stfreitas"
                 target="_blank" rel="external">
-                <img class="icons" src="./imgs/icons/medium.png"
+                <img class="icons" src="./assets/imgs/icons/medium.png"
                 title="Medium"/></a>
         </section>
-    <script type="text/javascript" src="animation.js"></script>
+    <script type="text/javascript" src="./assets/js/animation.js"></script>
     </body>
 </html>
